--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^14.5.0",
     "@react-native-firebase/auth": "^14.5.0",
     "@react-native-firebase/database": "^14.5.0",
+    "@react-native-firebase/storage": "^14.5.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.0.2",
